tests/testFiles/semanticErrors/callfunctionwithtoofewargs.meme
you: sample(a, b, c)
me, an intellectual: {
  dicks.out("This function has three parameters.");
}

sample();
